--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,8 +18,10 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.22.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
